; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_dashenc.c_select_segment_type.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_dashenc.c_select_segment_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEGMENT_TYPE_AUTO = common dso_local global i64 0, align 8
@AV_CODEC_ID_OPUS = common dso_local global i32 0, align 4
@AV_CODEC_ID_VORBIS = common dso_local global i32 0, align 4
@AV_CODEC_ID_VP8 = common dso_local global i32 0, align 4
@AV_CODEC_ID_VP9 = common dso_local global i32 0, align 4
@SEGMENT_TYPE_WEBM = common dso_local global i64 0, align 8
@SEGMENT_TYPE_MP4 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i32)* @select_segment_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @select_segment_type(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @SEGMENT_TYPE_AUTO, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %29

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @AV_CODEC_ID_OPUS, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %24, label %12

12:                                               ; preds = %8
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @AV_CODEC_ID_VORBIS, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %24, label %16

16:                                               ; preds = %12
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @AV_CODEC_ID_VP8, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %24, label %20

20:                                               ; preds = %16
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @AV_CODEC_ID_VP9, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %20, %16, %12, %8
  %25 = load i64, i64* @SEGMENT_TYPE_WEBM, align 8
  store i64 %25, i64* %3, align 8
  br label %28

26:                                               ; preds = %20
  %27 = load i64, i64* @SEGMENT_TYPE_MP4, align 8
  store i64 %27, i64* %3, align 8
  br label %28

28:                                               ; preds = %26, %24
  br label %29

29:                                               ; preds = %28, %2
  %30 = load i64, i64* %3, align 8
  ret i64 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
